# kshdb

./: .gitignore  .travis.yml  INSTALL  Makefile.am  NEWS  NEWS.md  README  README.md  THANKS  autogen.sh  configure.ac  dbg-file.inc  dbg-fns.inc  dbg-init.inc  dbg-io.inc  dbg-io.sh  dbg-list.inc  dbg-main.inc  dbg-main.sh  dbg-opts.sh  dbg-pre.inc  dbg-pre.sh  dbg-sig.inc  dbg-trace.sh.in  dbg-tracefn.inc  kshdb  kshdb-trace.in  kshdb.in  kshtrace.sh
admin/: how-to-make-a-release.md
admin-tools/: how-to-make-a-release.md
command/: .gitignore  Makefile.am  alias.sh  backtrace.sh  break.sh  complete.sh  condition.sh  continue.sh  debug.sh  delete.sh  disable.sh  display.sh  down.sh  edit.sh  enable.sh  eval.sh  examine.sh  frame.sh  handle.sh  help.sh  info.sh  kill.sh  list.sh  next.sh  pwd.sh  quit.sh  run.sh  set.sh  shell.sh  show.sh  skip.sh  source.sh  step.sh  stepping.sh  trace.sh  tracefn.sh  undisplay.sh  untrace.sh  up.sh  where.sh
command/info_sub/: Makefile.am  args.sh  breakpoints.sh  brkpts.sh  files.sh  functions.sh  program.sh  variables.sh  warranty.sh
command/set_sub/: Makefile.am  annotate.sh  args.sh  autolist.sh  confirm.sh  debug.sh  different.sh  editing.sh  highlight.sh  history.sh  listsize.sh  style.sh  style.sh-notyet  trace-commands.sh  width.sh
command/show_sub/: Makefile.am  alias.sh  args.sh  basename.sh  commands.sh  copying.sh  debug.sh  debugging.sh  directories.sh  highlight.sh  history.sh  listsize.sh  prompt.sh  style.sh  style.sh-notyet
data/: shell.sh
doc/: .gitignore  Makefile.am  kshdb-man.pod
docs/: Makefile  conf.py  entry-exit.rst  features.rst  index.rst  install.rst  make.bat  manpage.rst
docs/commands/: set.rst
docs/commands/breakpoints/: condition.rst
docs/commands/data/: eval.rst  examine.rst  load.rst
docs/commands/info/: breakpoints.rst  line.rst  program.rst  source.rst
docs/commands/running/: debug.rst  step.rst
docs/commands/set/: autoeval.rst  different.rst  editing.rst
docs/commands/show/: autoeval.rst
docs/syntax/: command.rst
emacs/: .gitignore  Makefile.am  dbg-test.el.in  kshdb.el
init/: opts.sh  pre.sh  term-background.sh
lib/: Makefile.am  action.sh  alias.sh  break.sh  columnize.sh  complete.sh  dbg-call.sh  display.sh  file.sh  filecache.sh  fns.sh  frame.sh  gdb.sh  help.sh  hist.sh  hook.sh  info.sh  journal.sh  list.sh  log.sh  msg.sh  processor.sh  run.sh  save-restore.sh  set-d-vars.sh  setshow.sh  shell.sh  sig.sh  term-highlight.py  tty.sh
test/: Makefile.am  hanoi.sh
test/data/: Makefile.am  break.cmd  break.right  bug-args.right  bug-errexit.cmd  bug-errexit.right  bugIFS.right  condition.right  delete.cmd  delete.right  display.right  enable.right  examine.cmd  examine.right  frame.cmd  frame.right  info-args.cmd  info-args.right  list.right  next.cmd  next.right  restart.cmd  restart.right  setshow.cmd  setshow.right  skip.cmd  skip.right  step.cmd  step.right  subshell1.cmd  subshell1.right
test/example/: .gitignore  Makefile.am  bug-args.sh  bug-errexit.sh  bugIFS.sh  dbg-test1.sh  dbg-test2.sh  exam.sh  hanoi.sh.in  nexting.sh  restart.sh  settrace.sh  stepping.sh  subshell.sh
test/integration/: .gitignore  Makefile.am  check-common.sh.in  test-bug-args  test-bug-errexit  test-bug-errexit.in  test-bugIFS  test-condition  test-delete  test-enable  test-enable.in  test-examine  test-examine.in  test-file-with-spaces  test-frame  test-frame.in  test-list  test-list.in  test-next  test-restart  test-restart.in  test-setshow  test-setshow.in  test-skip  test-step  test-step.in  test-subshell1  test-subshell1.in
test/unit/: .gitignore  Makefile.am  helper.sh  shunit2  test-alias.sh.in  test-break.sh.in  test-cmd-complete.sh.in  test-columns.sh.in  test-dbg-opts.sh.in  test-eval.sh.in  test-examine.sh.in  test-file.sh.in  test-filecache.sh.in  test-fns.sh.in  test-frame.sh.in  test-get-sourceline.sh.in  test-io.sh.in  test-journal.sh.in  test-lib-complete.sh.in  test-msg.sh.in  test-pre.sh.in  test-run.sh.in  test-save-restore.sh.in  test-setshow.sh.in  test-sort.sh.in  test-tty.sh.in
