SUBDIRS = info_sub set_sub show_sub

MOSTLYCLEANFILES = *.orig *.rej

pkgdatadir        = ${datadir}/@PACKAGE@/command
pkgdata_DATA =       \
	alias.sh     \
	break.sh     \
	condition.sh \
	continue.sh  \
	delete.sh    \
	disable.sh   \
	display.sh   \
	down.sh      \
	edit.sh      \
	enable.sh    \
	eval.sh      \
	examine.sh   \
	frame.sh     \
	help.sh      \
	info.sh      \
	list.sh      \
	quit.sh      \
	run.sh       \
	set.sh       \
	shell.sh     \
	show.sh      \
	source.sh    \
	stepping.sh  \
	tracefn.sh   \
	undisplay.sh   \
	up.sh        \
	where.sh

EXTRA_DIST = $(pkgdata_DATA)
