pkgdatadir        = ${datadir}/@PACKAGE@/lib
pkgdata_DATA =      	\
	alias.sh        \
	columnize.sh    \
	dbg-call.sh  	\
	file.sh         \
	filecache.sh    \
	fns.sh          \
	frame.sh        \
	help.sh  	\
	hook.sh		\
	info.sh		\
	gdb.sh  	\
	journal.sh  	\
	list.sh  	\
	msg.sh    	\
	processor.sh   	\
	run.sh    	\
	save-restore.sh	\
	set-d-vars.sh

EXTRA_DIST = $(pkgdata_DATA)
