pkgdatadir        = ${datadir}/@PACKAGE@/lib
pkgdata_DATA =      	\
	alias.sh        \
	break.sh        \
	columnize.sh    \
	dbg-call.sh  	\
	filecache.sh    \
	file.sh         \
	fns.sh          \
	frame.sh        \
	gdb.sh  	\
	help.sh  	\
	hook.sh		\
	info.sh		\
	journal.sh  	\
	list.sh  	\
	msg.sh    	\
	processor.sh   	\
	run.sh    	\
	save-restore.sh	\
	set-d-vars.sh   \
	sort.sh         \
	tty.sh

EXTRA_DIST = $(pkgdata_DATA)
