check_DATA = \
	bug-args.cmd       \
	bug-args.right     \
	bug-errexit.cmd    \
	bug-errexit.right  \
	bugIFS.cmd         \
	bugIFS.right       \
	frame.cmd          \
	frame.right        \
	next.cmd           \
	next.right	   \
	setshow.cmd        \
	setshow.right      \
	settrace.cmd       \
	settrace.right     \
	step.cmd           \
	step.right

EXTRA_DIST = $(check_DATA)
