check_DATA = \
	break.cmd          \
	break.right        \
	bug-args.cmd       \
	bug-args.right     \
	bug-errexit.cmd    \
	bug-errexit.right  \
	bugIFS.cmd         \
	bugIFS.right       \
	condition.cmd      \
	condition.right    \
	delete.cmd         \
	delete.right       \
	display.cmd        \
	display.right      \
	enable.cmd         \
	enable.right       \
	examine.cmd        \
	examine.right      \
	frame.cmd          \
	frame.right        \
	list.cmd           \
	list.right	   \
	next.cmd           \
	next.right	   \
	restart.cmd	   \
	restart2.cmd	   \
	restart.right	   \
	setshow.cmd        \
	setshow.right      \
	settrace.cmd       \
	settrace.right     \
	skip.cmd           \
	skip.right         \
	step.cmd           \
	step.right         \
	subshell1.cmd      \
	subshell1.right

EXTRA_DIST = $(check_DATA)
