## Process this file with automake to produce Makefile.in -*-Makefile-*-.
#$Id: Makefile.am,v 1.1 2008/06/01 00:49:16 rockyb Exp $

TESTS = test-fns.sh test-io.sh test-pre.sh test-run.sh test-save-restore.sh
check_DATA = shunit2

abs_srcdir=@abs_srcdir@
abs_builddir=@abs_builddir@

EXTRA_DIST = $(TESTS) $(check_DATA) \
	test-alias.sh.in \
	test-fns.sh.in   \
	test-io.sh.in    \
	test-pre.sh.in   \
	test-run.sh.in   \
	test-save-restore.sh.in
